modify miro navbar

--- a/miro/index.html
+++ b/miro/index.html
@@ -23,6 +23,8 @@
           <li><a href="#">Предприятия</a></li>
           <li><a href="#">Тарифы</a></li>
         </ul>
+        <img src="./images/globus.svg" alt="Изменение языка" class="langimg" />
+        <a href="#" class="reglink">Регистрация</a>
       </nav>
     </header>
     <main>
