--- a/miro/index.html
+++ b/miro/index.html
@@ -27,13 +27,18 @@
         <a href="#" class="reglink">Регистрация</a>
       </nav>
     </header>
+
     <main>
       <section id="heroSection">
         <div>
-          <h1>Место для командной работы</h1>
+          <h1>
+            Место для<br />
+            командной<br />
+            работы
+          </h1>
           <p class="ptext">
-            Интерактивная онлайн-доска для совместной работы команд — в любое
-            время, в любом месте.
+            Интерактивная онлайн-доска для совместной<br />работы команд — в
+            любое время, в любом месте.
           </p>
           <form action="#" id="heroForm">
             <label for="heroEmail">E-mail</label>
@@ -57,17 +62,46 @@
       </section>
       <section id="secondSection">
         <div>
-          <h2>Работайте вместе, где бы вы ни находились</h2>
+          <h2>Работайте вместе,<br />где бы вы ни<br />находились</h2>
           <p class="ptext gray">
-            Работая в офисе, удалённо или в гибридном формате, с Miro ваша
-            команда может общаться, сотрудничать и совместно заниматься
-            творчеством в одном пространстве, из любой точки мира.
+            Работая в офисе, удалённо или в гибридном<br />формате, с Miro ваша
+            команда может общаться,<br />сотрудничать и совместно заниматься<br />
+            творчеством в одном пространстве, из любой<br />точки мира.
           </p>
           <a href="#">Узнать больше</a>
         </div>
         <img src="./images/miro_2.png" alt="Совместная работа в Miro" />
       </section>
-      <section></section>
+      <section id="thirdSection">
+        <img
+          src="./images/miro_3.png"
+          alt="Пример интеграции других сервисов"
+        />
+        <div>
+          <h2>Закройте лишние<br />вкладки — всё<br />уже здесь</h2>
+          <p class="ptext gray">
+            Редактируете ли вы документы в Google Docs,<br />работаете над
+            задачами в Jira или<br />созваниваетесь в Zoom, Miro предлагает
+            более<br />100 интеграций с уже известными и<br />полюбившимися вам
+            инструментами.
+          </p>
+          <a href="#">Узнать больше</a>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div>
+        <div><p>&copy; 2023 Miro</p></div>
+        <div>
+          <p>Условия пользования</p>
+        </div>
+        <div>
+          <p>Политика Конфиденциальности</p>
+        </div>
+        <div>
+          <p>Управление файлами cookies</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
