add footer to School template

--- a/school/index.html
+++ b/school/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/page.css" />
     <link rel="stylesheet" href="./styles/components/button.css" />
+    <link rel="stylesheet" href="./styles/footer.css" />
     <title>School</title>
   </head>
   <body>
@@ -59,6 +60,59 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer__links">
+        <a href="#" class="footer__links__logo">
+          <img src="./images/logo.svg" alt="логотип Purple School"
+        /></a>
+        <div class="footer__socials">
+          <a class="footer_socials__link" href="#"
+            ><img src="./images/youtube_logo.svg" alt="Логотип youtube"
+          /></a>
+          <a class="footer_socials__link" href="#"
+            ><img src="./images/telegram_logo.svg" alt="Логотип telegram"
+          /></a>
+          <a class="footer_socials__link" href="#"
+            ><img src="./images/vk_logo.svg" alt="Логотип vk"
+          /></a>
+        </div>
+        </div>
+        <div class="footer__data">
+          <div class="footer__menu">
+            <p class="footer__list__head">Меню</p>
+            <ul class="footer__list">
+              <li class="footer__list__item"><a href="#">Курсы</a></li>
+              <li class="footer__list__item"><a href="#">О школе</a></li>
+              <li class="footer__list__item"><a href="#">Блог</a></li>
+              <li class="footer__list__item"><a href="#">База знаний</a></li>
+            </ul>
+          </div>
+          <div class="footer__documents">
+            <p class="footer__list__head">Документы</p>
+            <ul class="footer__list">
+              <li class="footer__list__item"><a href="#">Договор оферта</a></li>
+              <li class="footer__list__item">
+                <a href="#">Политика конфиденциальности</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__requisites">
+            <p class="footer__list__head">Реквизиты</p>
+            <ul class="footer__list">
+              <li class="footer__list__item footer__list__item_gray">
+                ИП Ларичев Антон Андреевич
+              </li>
+              <li class="footer__list__item footer__list__item_gray">
+                ИНН 773373765379
+              </li>
+              <li class="footer__list__item">contact@purpleschool.ru</li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copywrite">
+          PurpleSchool © 2020 - 2023 Все права защищены
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
