add blog section
mod footer

--- a/school/index.html
+++ b/school/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./styles/page.css" />
     <link rel="stylesheet" href="./styles/components/button.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/components/socials.css" />
+    <link rel="stylesheet" href="./styles/components/subheading.css" />
     <title>School</title>
   </head>
   <body>
@@ -59,23 +61,140 @@
           />
         </div>
       </section>
+      <section>
+        <div class="blog__wrapper">
+          <div class="blog__header">
+            <div class="subheading">
+              <p class="subheading__super">Блог и социальные сети</p>
+              <h2 class="subheading__main">Полезные материалы</h2>
+            </div>
+            <p class="blog__p">
+              Каждую неделю мы публикуем новости, обновления, а так же
+              дополнительные полезные материалы в социальных сетях:
+            </p>
+            <div class="socials">
+              <a class="socials__link" href="#"
+                ><img src="./images/youtube_logo.svg" alt="Логотип youtube"
+              /></a>
+              <a class="socials__link" href="#"
+                ><img src="./images/telegram_logo.svg" alt="Логотип telegram"
+              /></a>
+              <a class="socials__link" href="#"
+                ><img src="./images/vk_logo.svg" alt="Логотип vk"
+              /></a>
+            </div>
+          </div>
+          <div class="articles">
+            <div class="articles__item">
+              <div class="articles__item__content">
+                <div class="articles__item__statistic">
+                  <div class="articles__item__statistic__unit">
+                    <img
+                      src="./images/icons/Calendar.svg"
+                      alt="Миниатюра календаря"
+                    />
+                    <p>06 мая 2023</p>
+                  </div>
+                  <div class="articles__item__statistic__unit">
+                    <img src="./images/icons/Eye.svg" alt="Миниатюра глаза" />
+                    <p>06 мая 2023</p>
+                  </div>
+                </div>
+                <h3>Критика в работе – ваш друг, но не всегда</h3>
+                <p>
+                  Когда делаешь код ревью иногда встречаешь с тем, что даешь
+                  конструктивную критику и она воспринимается в штыки, словно
+                  это личное оскорбление. Человек всеми силами пытается
+                  сопротивляться обратной связи и не готов слушать аргументы.
+                  Тут варианта два: или обратная связь дана некорректно, или
+                  человек не воспринимает критику. В этом посте я хочу
+                  сосредоточиться на том, как работать с критикой.
+                </p>
+              </div>
+              <button class="button button_secondary">Читать</button>
+            </div>
+            <div class="articles__item">
+              <div class="articles__item__content">
+                <div class="articles__item__statistic">
+                  <div class="articles__item__statistic__unit">
+                    <img
+                      src="./images/icons/Calendar.svg"
+                      alt="Миниатюра календаря"
+                    />
+                    <p>06 мая 2023</p>
+                  </div>
+                  <div class="articles__item__statistic__unit">
+                    <img src="./images/icons/Eye.svg" alt="Миниатюра глаза" />
+                    <p>06 мая 2023</p>
+                  </div>
+                </div>
+                <h3>Критика в работе – ваш друг, но не всегда</h3>
+                <p>
+                  Когда делаешь код ревью иногда встречаешь с тем, что даешь
+                  конструктивную критику и она воспринимается в штыки, словно
+                  это личное оскорбление. Человек всеми силами пытается
+                  сопротивляться обратной связи и не готов слушать аргументы.
+                  Тут варианта два: или обратная связь дана некорректно, или
+                  человек не воспринимает критику. В этом посте я хочу
+                  сосредоточиться на том, как работать с критикой.
+                </p>
+              </div>
+              <button class="button button_secondary">Читать</button>
+            </div>
+            <div class="articles__item">
+              <div class="articles__item__content">
+                <div class="articles__item__statistic">
+                  <div class="articles__item__statistic__unit">
+                    <img
+                      src="./images/icons/Calendar.svg"
+                      alt="Миниатюра календаря"
+                    />
+                    <p>06 мая 2023</p>
+                  </div>
+                  <div class="articles__item__statistic__unit">
+                    <img src="./images/icons/Eye.svg" alt="Миниатюра глаза" />
+                    <p>06 мая 2023</p>
+                  </div>
+                </div>
+                <h3>Критика в работе – ваш друг, но не всегда</h3>
+                <p>
+                  Когда делаешь код ревью иногда встречаешь с тем, что даешь
+                  конструктивную критику и она воспринимается в штыки, словно
+                  это личное оскорбление. Человек всеми силами пытается
+                  сопротивляться обратной связи и не готов слушать аргументы.
+                  Тут варианта два: или обратная связь дана некорректно, или
+                  человек не воспринимает критику. В этом посте я хочу
+                  сосредоточиться на том, как работать с критикой.
+                </p>
+              </div>
+              <button class="button button_secondary">Читать</button>
+            </div>
+          </div>
+          <div class="blog__btn">
+            <button class="button button_secondary blog__all-button">
+              Все публикации
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-      <div class="footer__links">
-        <a href="#" class="footer__links__logo">
-          <img src="./images/logo.svg" alt="логотип Purple School"
-        /></a>
-        <div class="footer__socials">
-          <a class="footer_socials__link" href="#"
-            ><img src="./images/youtube_logo.svg" alt="Логотип youtube"
+      <div class="footer__wrapper">
+        <div class="footer__links">
+          <a href="#" class="footer__links__logo">
+            <img src="./images/logo.svg" alt="логотип Purple School"
           /></a>
-          <a class="footer_socials__link" href="#"
-            ><img src="./images/telegram_logo.svg" alt="Логотип telegram"
-          /></a>
-          <a class="footer_socials__link" href="#"
-            ><img src="./images/vk_logo.svg" alt="Логотип vk"
-          /></a>
-        </div>
+          <div class="socials">
+            <a class="socials__link" href="#"
+              ><img src="./images/youtube_logo.svg" alt="Логотип youtube"
+            /></a>
+            <a class="socials__link" href="#"
+              ><img src="./images/telegram_logo.svg" alt="Логотип telegram"
+            /></a>
+            <a class="socials__link" href="#"
+              ><img src="./images/vk_logo.svg" alt="Логотип vk"
+            /></a>
+          </div>
         </div>
         <div class="footer__data">
           <div class="footer__menu">
