add course grid

--- a/school/index.html
+++ b/school/index.html
@@ -61,6 +61,32 @@
           />
         </div>
       </section>
+      <section class="courses">
+        <div class="courses__head">
+          <div class="subheading">
+            <p class="subheading__super">Выбрать курс</p>
+            <h2 class="subheading__main">Каталог курсов</h2>
+          </div>
+          <div class="courses__chip-line">
+            <button class="button button_primary button_small">Все</button
+            ><button class="button button_secondary button_small">
+              Frontend</button
+            ><button class="button button_secondary button_small">
+              Backend</button
+            ><button class="button button_secondary button_small">DevOps</button
+            ><button class="button button_secondary button_small">
+              Soft Skills
+            </button>
+          </div>
+        </div>
+        <div class="courses__cards">
+          <div class="card">1</div>
+          <div class="card">1</div>
+          <div class="card">1</div>
+          <div class="card">1</div>
+          <div class="card">1</div>
+        </div>
+      </section>
       <section>
         <div class="blog__wrapper">
           <div class="blog__header">
