--- a/school/index.html
+++ b/school/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles/footer.css" />
     <link rel="stylesheet" href="./styles/components/socials.css" />
     <link rel="stylesheet" href="./styles/components/subheading.css" />
+    <link rel="stylesheet" href="./styles/components/card.css" />
     <title>School</title>
   </head>
   <body>
@@ -80,11 +81,175 @@
           </div>
         </div>
         <div class="courses__cards">
-          <div class="card">1</div>
-          <div class="card">1</div>
-          <div class="card">1</div>
-          <div class="card">1</div>
-          <div class="card">1</div>
+          <div class="card">
+            <div class="card__cover"></div>
+            <div class="card__body">
+              <div class="card__title">React + Next.js - с нуля</div>
+              <div class="card__author">Антон Ларичев</div>
+              <div class="card__lecture-time">
+                <img src="./images/time_icon.svg" alt="Значок часов" />
+                <div>18 часов лекций</div>
+              </div>
+              <div class="card__lecture__statistic">
+                <div class="card__stat-item">
+                  <img src="./images/Star.svg" alt="Значок звезды" />
+                  <div>4.9</div>
+                </div>
+                <div class="card__stat-item">
+                  <div>Frontend</div>
+                </div>
+              </div>
+            </div>
+            <div class="card__footer">
+              <div class="card__price">От 1890 &#8381;</div>
+              <button class="button button_primary">Подробнее</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__cover"></div>
+            <div class="card__body">
+              <div class="card__title">React + Next.js - с нуля</div>
+              <div class="card__author">Антон Ларичев</div>
+              <div class="card__lecture-time">
+                <img src="./images/time_icon.svg" alt="Значок часов" />
+                <div>18 часов лекций</div>
+              </div>
+              <div class="card__lecture__statistic">
+                <div class="card__stat-item">
+                  <img src="./images/Star.svg" alt="Значок звезды" />
+                  <div>4.9</div>
+                </div>
+                <div class="card__stat-item">
+                  <div>Frontend</div>
+                </div>
+              </div>
+            </div>
+            <div class="card__footer">
+              <div class="card__price">От 1890 &#8381;</div>
+              <button class="button button_primary">Подробнее</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__cover"></div>
+            <div class="card__body">
+              <div class="card__title">React + Next.js - с нуля</div>
+              <div class="card__author">Антон Ларичев</div>
+              <div class="card__lecture-time">
+                <img src="./images/time_icon.svg" alt="Значок часов" />
+                <div>18 часов лекций</div>
+              </div>
+              <div class="card__lecture__statistic">
+                <div class="card__stat-item">
+                  <img src="./images/Star.svg" alt="Значок звезды" />
+                  <div>4.9</div>
+                </div>
+                <div class="card__stat-item">
+                  <div>Frontend</div>
+                </div>
+              </div>
+            </div>
+            <div class="card__footer">
+              <div class="card__price">От 1890 &#8381;</div>
+              <button class="button button_primary">Подробнее</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__cover"></div>
+            <div class="card__body">
+              <div class="card__title">React + Next.js - с нуля</div>
+              <div class="card__author">Антон Ларичев</div>
+              <div class="card__lecture-time">
+                <img src="./images/time_icon.svg" alt="Значок часов" />
+                <div>18 часов лекций</div>
+              </div>
+              <div class="card__lecture__statistic">
+                <div class="card__stat-item">
+                  <img src="./images/Star.svg" alt="Значок звезды" />
+                  <div>4.9</div>
+                </div>
+                <div class="card__stat-item">
+                  <div>Frontend</div>
+                </div>
+              </div>
+            </div>
+            <div class="card__footer">
+              <div class="card__price">От 1890 &#8381;</div>
+              <button class="button button_primary">Подробнее</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__cover"></div>
+            <div class="card__body">
+              <div class="card__title">React + Next.js - с нуля</div>
+              <div class="card__author">Антон Ларичев</div>
+              <div class="card__lecture-time">
+                <img src="./images/time_icon.svg" alt="Значок часов" />
+                <div>18 часов лекций</div>
+              </div>
+              <div class="card__lecture__statistic">
+                <div class="card__stat-item">
+                  <img src="./images/Star.svg" alt="Значок звезды" />
+                  <div>4.9</div>
+                </div>
+                <div class="card__stat-item">
+                  <div>Frontend</div>
+                </div>
+              </div>
+            </div>
+            <div class="card__footer">
+              <div class="card__price">От 1890 &#8381;</div>
+              <button class="button button_primary">Подробнее</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="feedback">
+        <div class="feedback__wrapper">
+          <div class="feedback__header">
+            <div class="subheading">
+              <p class="subheading__super">О школе</p>
+              <h2 class="subheading__main">Нам доверяют</h2>
+            </div>
+            <p class="blog__p">
+              Основатель школы и автор Антон Ларичев занимается разработкой уже
+              более 13 лет и прошёл путь от разработчика до CTO. В курсах даются
+              актуальные материалы без воды с опытом реальных проектов и
+              практическим закреплением материала.
+            </p>
+          </div>
+          <div class="card card_light card_padding-48 feedback__stat_card">
+            <div class="feedback__text_gradient">15 000</div>
+            <div class="feedback__text_base">учеников по всему миру</div>
+          </div>
+          <div class="card card_light card_padding-48 feedback__stat_card">
+            <div class="feedback__text_gradient">30 дней</div>
+            <div class="feedback__text_base">гарантия возврата денег</div>
+          </div>
+          <div class="card card_light card_padding-48 feedback__stat_card">
+            <div class="feedback__text_gradient">90%</div>
+            <div class="feedback__text_base">студентов рекомендуют курсы</div>
+          </div>
+          <h3 class="feedback__ratings-header">
+            Рейтинги на независимых платформах
+          </h3>
+          <div class="card card_light card_padding-24 feedback__rating-wrapper">
+            <div class="rating-number">4.8</div>
+            <div>
+              <img src="./images/courses_rating_1.svg" alt="" />
+            </div>
+          </div>
+          <div class="card card_light card_padding-24 feedback__rating-wrapper">
+            <div class="rating-number">4.8</div>
+            <div>
+              <img src="./images/courses_rating_2.svg" alt="" />
+            </div>
+          </div>
+          <div class="card card_light card_padding-24 feedback__rating-wrapper">
+            <div class="rating-number">4.7</div>
+            <div>
+              <img src="./images/courses_rating_3.svg" alt="" />
+            </div>
+          </div>
         </div>
       </section>
       <section>
